--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ bot.db-journal
 find_github.sh
 /Class/__pycache__
 bot.service
+Class/__pycache__/Group_member.cpython-312.pyc
+Class/__pycache__/Group_member.cpython-312.pyc
+Class/__pycache__/User_point.cpython-312.pyc
