禁用qwen3的思考模式以提高反应速度。

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ bot.service
 Class/__pycache__/Group_member.cpython-312.pyc
 Class/__pycache__/Group_member.cpython-312.pyc
 Class/__pycache__/User_point.cpython-312.pyc
+/venv/
