修正基础错误。

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ Class/__pycache__/Group_member.cpython-312.pyc
 Class/__pycache__/Group_member.cpython-312.pyc
 Class/__pycache__/User_point.cpython-312.pyc
 /venv/
+/groups/*
