--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ Class/__pycache__/Group_member.cpython-312.pyc
 Class/__pycache__/User_point.cpython-312.pyc
 /venv/
 /groups/*
+/test/
+__pycache__/
